--- a/index.css
+++ b/index.css
@@ -48,6 +48,7 @@ body {
   max-width: 95%;
   display: flex;
   flex-direction: column;
+  box-shadow: 8px 8px 0px rgba(0, 0, 0, 1);
 }
 
 .card-image {
