--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@500,700,800&display=swap");
 
 :root {
   --white: hsl(0, 0%, 100%);
@@ -44,8 +42,8 @@ body {
   border-radius: 2rem;
   padding: 2.4rem;
   gap: 2.4rem;
-  width: 38.4rem;
-  max-width: 95%;
+  width: 95%;
+  max-width: 38.4rem;
   display: flex;
   flex-direction: column;
   box-shadow: 8px 8px 0px rgba(0, 0, 0, 1);
